# strainer

./: .clippy.toml  .cursorrules  .gitignore  .windsurfrules  Cargo.toml  LICENSE  README.md  crates.js  devbox.json  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: test.yml
examples/: anthropic.toml  config.toml  minimal.toml
scripts/: check.sh
search.desc/strainer/: strainer-desc-0-.js
src/: cli.rs  config.rs  init.rs  lib.rs  main.rs  process.rs  rate_limiter.rs  test_utils.rs
src/providers/: anthropic.rs  config.rs  mock.rs  mod.rs  openai.rs  prelude.rs  rate_limiter.rs
src/strainer/: config.rs.html  lib.rs.html  test_utils.rs.html
src/strainer/providers/: anthropic.rs.html  mock.rs.html  mod.rs.html  rate_limiter.rs.html
strainer/: all.html  index.html  sidebar-items.js
strainer/config/: index.html  sidebar-items.js  struct.ApiConfig.html  struct.BackoffConfig.html  struct.Config.html  struct.LoggingConfig.html  struct.ProcessConfig.html  struct.RateLimits.html  struct.Thresholds.html
strainer/providers/: fn.create_provider.html  index.html  sidebar-items.js  struct.RateLimitInfo.html  trait.Provider.html
strainer/providers/anthropic/: index.html  (+1 more)
strainer/test_utils/: index.html  sidebar-items.js  struct.MockProvider.html
tests/: cli_init_test.rs  cli_test.rs  common.rs  config_test.rs  init_test.rs  migration_test.rs  mod.rs  provider_test.rs  rate_limiter_prop_test.proptest-regressions  rate_limiter_prop_test.rs  rate_limiter_test.rs
(+18 files in other folders)
